--- a/essay/apps/main/templates/calendar.html
+++ b/essay/apps/main/templates/calendar.html
@@ -105,7 +105,7 @@
     function mysecondajax(y,m,a){
 
             var myduedate = y + "-" + m + "-" + (a+1);
-            window.location.href="../result?key="+myduedate;
+            window.location.href="../calendar_result?key="+myduedate;
 
     }
 </script>
