--- a/essay/apps/main/templates/planResult.html
+++ b/essay/apps/main/templates/planResult.html
@@ -17,7 +17,7 @@
 		<div id="OriginalTextBox">
 			<div class="back" onclick="result_back();"></div>
 			<div class="middleBox">
-				<p>作文原文:</p>
+				<p>作文标题:{{title}}</p>
 				<div id="formertext"></div>
                 <div id="showMagic"></div>
 			</div>
