--- a/essay/apps/main/static/login/css/planResult.css
+++ b/essay/apps/main/static/login/css/planResult.css
@@ -62,6 +62,20 @@ body{width: 100%;height: auto;}
 	margin-top: 15px;
 }
 
+.mytitle{
+    width:300px;
+    height:15px;
+    margin-top:10px;
+    display:inline-block;
+}
+.mytype{
+    width:100px;
+    height:15px;
+    margin-top:10px;
+    display:inline-block;
+    color:lightblue;
+}
+
 #OriginalTextBox{
 	width: 1000px;
 	height: auto;
