--- a/essay/apps/teacher/templates/teacher/teacherPage.html
+++ b/essay/apps/teacher/templates/teacher/teacherPage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="logo"></div>
-	<div id="namebox">{{name}}</div>
+	<div id="namebox">{{result.name}}</div>
 	<div id="exitbox"><a href="{% url 'teacher:exit' %}"></a></div>
 
 	<div class="outerContainer">
@@ -18,7 +18,7 @@
 			<div class="top_left">
 				<div class="teacherBox">
 					<div class="teacherPicBox">
-						<a href="##" id="timgA" onclick="showPhoto();"><img src=""></a>
+						<a href="##" id="timgA" onclick="showPhoto();"><img src="/static/jpg/{{result.personico}}"></a>
 					</div>
 					<div>
 						<button class="personalInfor">个人信息管理</button>
