pan 4.23完善了教师端部分

--- a/essay/main/templates/main/Login&Register.html
+++ b/essay/main/templates/main/Login&Register.html
@@ -43,6 +43,13 @@
 		</div>
 	</div>
 
+	<!--传入教师名单-->
+	<!--<script type="text/javascript">-->
+		<!--var teacherList = {{ teacherList|safe }};-->
+		<!--console.log(teacherList);-->
+		<!--alert(teacherList);-->
+	<!--</script>-->
+
 	<!-- <div id="orange">
 		<p id="Copyright">Copyright 2017 All rights reserved.</p>
 	</div> -->
