tyc 4.26 日历正常弹窗

--- a/essay/main/static/login/css/planResult.css
+++ b/essay/main/static/login/css/planResult.css
@@ -275,7 +275,8 @@ body{width: 100%;height: auto;}
 	height: auto;
 	border:1px #EBEBEB solid;
 	border-radius: 5px;
-	position: relative;
+	/*position: relative;*/
+	position: absolute;
 	background-color: white;
 	/*margin-left: -150px;*/
 	margin-left: -150px;
