--- a/essay/main/static/login/css/planResult.css
+++ b/essay/main/static/login/css/planResult.css
@@ -270,28 +270,35 @@ body{width: 100%;height: auto;}
 
 
 
-.replaceWord{
-	width: 110px;
-	height: auto;
-	border:1px #EBEBEB solid;
+#replaceWord{
+	width: 130px;
+    height:auto;
+	border:3px #EBEBEB solid;
 	border-radius: 5px;
 	/*position: relative;*/
 	position: absolute;
 	background-color: white;
-	/*margin-left: -150px;*/
+	/*margin-left: -150px;
 	margin-left: -150px;
 	padding-left: 5px;
+	left:0;
+	top:0;*/
+    display:none;
 	box-shadow: 0px 0px 25px #EBEBEB;
 }
 
 
-.replaceWord span{
+#replaceWord span{
 	display: block;
-	width: 90px;
+	width: auto;
+	color:black;
 	height: auto;
 	white-space: pre-wrap;
 	word-wrap: break-word;
+	margin-left:10px;
 }
+
+
 
 #showMagic{
 	width: 100%;
