--- a/essay/main/static/login/css/calendar.css
+++ b/essay/main/static/login/css/calendar.css
@@ -91,7 +91,7 @@ body{width: 100%;
 
 #mytable button{
 	border-radius: 10px;
-	width: 150px;
+	width: 130px;
 	height: 25px;
 	border:none;
 	background-color: #FAA041;
@@ -101,7 +101,7 @@ body{width: 100%;
 
 #mytable button:hover{
 	border-radius: 10px;
-	width: 150px;
+	width: 130px;
 	height: 25px;
 	border:none;
 	background-image: url(../img/Calendar/history.png);
@@ -483,6 +483,48 @@ body{width: 100%;
 			color: #4FEAFB;
 		}
 
+		.title_1_success{
+			width: 380px;
+			height: 30px;
+			border:1px solid #43ED8D;
+			margin-left: 50px;
+			text-align: center;
+			border-radius: 5px;
+			line-height: 30px;
+			color:white;
+			background-color:#43ED8D;
+		}
+		.title_1_success:hover{
+			cursor: pointer;
+			color: white;
+			box-shadow:0px 0px 20px #43ED8D;
+		}
+		.title_2_success{
+			width: 380px;
+			height: 30px;
+			line-height: 30px;
+			border:1px solid #43ED8D;
+			margin-left: 50px;
+			text-align: center;
+			border-radius: 5px;
+			color:white;
+			background-color:#43ED8D;
+		}
+		.title_2_success:hover{
+			cursor: pointer;
+			color: white;
+			box-shadow:0px 0px 20px #43ED8D;
+		}
+
+		.title_2_white{
+            width: 380px;
+			height: 30px;
+			line-height: 30px;
+			border:1px solid white;
+			margin-left: 50px;
+			text-align: center;
+			border-radius: 5px;
+		}
 
 
 
